--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
       animation: glitch 0.3s cubic-bezier(.25,.46,.45,.94) both;
     }
 
-    /* --- Collision Indicator Styles (Reverted to Border Style) --- */
+    /* --- Collision Indicator Styles (Perfect Fit) --- */
     @keyframes pulse-red-border {
-        0%, 100% { box-shadow: 0 -2px 0 0 rgba(239, 68, 68, 0.8); }
-        50% { box-shadow: 0 -2px 0 0 rgba(239, 68, 68, 1); }
+        0%, 100% { border-color: rgba(239, 68, 68, 0.8); }
+        50% { border-color: rgba(239, 68, 68, 1); }
     }
     @keyframes pulse-blue-border {
-        0%, 100% { box-shadow: 0 -2px 0 0 rgba(59, 130, 246, 0.8); }
-        50% { box-shadow: 0 -2px 0 0 rgba(59, 130, 246, 1); }
+        0%, 100% { border-color: rgba(59, 130, 246, 0.8); }
+        50% { border-color: rgba(59, 130, 246, 1); }
     }
     @keyframes pulse-red-bg-soft {
         0%, 100% { background-color: rgba(252, 165, 165, 0.6); }
@@ -99,25 +99,20 @@
       pointer-events: none;
     }
 
-    /* The visible arc of the indicator - now a sharp line via box-shadow */
+    /* The visible arc of the indicator - now uses border to perfectly fit shape */
     .indicator-arc {
       position: absolute;
       width: 100%;
       height: 100%;
-      border: none;
-      box-shadow: 0 -2px 0 0 rgba(239, 68, 68, 0.8);
+      border: 2px solid rgba(239, 68, 68, 0.8);
       clip-path: polygon(50% 0%, 100% 0%, 100% 30%, 50% 50%, 0% 30%, 0% 0%);
       animation: pulse-red-border 1.5s infinite;
-      transition: box-shadow 0.3s ease;
+      transition: border-color 0.3s ease;
     }
     
-    /* Shape-specific border radius for the arc */
-    .indicator-is-circle .indicator-arc { border-radius: 50%; }
-    .indicator-is-rounded-square .indicator-arc { border-radius: 14.3%; }
-
     /* Styling for the "avoiding" state */
     .indicator-avoiding .indicator-arc {
-      box-shadow: 0 -2px 0 0 rgba(59, 130, 246, 0.8);
+      border-color: rgba(59, 130, 246, 0.8);
       animation-name: pulse-blue-border;
     }
 
@@ -220,7 +215,6 @@
       border-radius: 50%;
       pointer-events: none;
       background-color: var(--dot-color);
-      box-shadow: 0 1px 2px rgba(0,0,0,0.3);
       transition: transform 0.2s ease-out, background-color 0.2s ease-in-out;
     }
 
