feat: Rework theme variables and add custom color support
This commit refactors the theme variable system in `index.html` to simplify and standardize UI colors, primarily focusing on a fixed light theme.

In `App.tsx`, the theme state management has been reworked. The `theme` state is removed, and new helper functions `hexToRgb` and `lightenHex` are introduced to facilitate color manipulation for custom palettes. Modal components for custom color selection are also prepared.

`BackgroundShapes.tsx` sees adjustments to constants for evasion tactics and animation durations, improving responsiveness and visual appeal. New properties like `isBoosting` and `consecutiveTurns` are added to the `ShapeState` interface to support more dynamic evasion behaviors. A new easing function, `easeOutBack`, is introduced for better animation timing. The `theme` prop is removed from `BackgroundShapesProps` as it's no longer managed directly there.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
   <style>
-    /* --- NEW: Theme Variable System --- */
+    /* --- NEW: Reworked Theme Variable System --- */
     :root {
-      --background-primary: 244 245 247; /* stone-100 */
-      --background-home: 241 245 249;    /* slate-100 */
-      --background-about: 240 253 250;   /* teal-50 */
-      --background-contact: 254 242 242; /* rose-50 */
+      /* UI Colors (Fixed Light Theme) */
       --background-card: 255 255 255;
-      --background-frosted: 224 242 254 / 0.3; /* sky-100/30 */
+      --background-frosted-base: 224 242 254; /* sky-100 */
       --background-button: 255 255 255 / 0.8;
       --background-button-refresh: 255 255 255 / 0.6;
       --background-countdown: 255 255 255 / 0.7;
@@ -33,30 +30,13 @@
 
       --border-primary: 229 231 235;   /* gray-200/50 */
       --ring-primary: 0 0 0 / 0.05;
-    }
 
-    .dark {
-      --background-primary: 30 41 59;      /* slate-800 */
-      --background-home: 15 23 42;         /* slate-900 */
-      --background-about: 20 37 37;        /* dark teal */
-      --background-contact: 45 26 26;      /* dark rose */
-      --background-card: 30 41 59;         /* slate-800 */
-      --background-frosted: 14 116 144 / 0.2; /* cyan-700/20 */
-      --background-button: 51 65 85 / 0.8;
-      --background-button-refresh: 51 65 85 / 0.6;
-      --background-countdown: 51 65 85 / 0.7;
-      --background-countdown-today: 16 75 45 / 0.8;
-
-      --text-primary: 226 232 240;      /* slate-200 */
-      --text-secondary: 203 213 225;     /* slate-300 */
-      --text-tertiary: 148 163 184;      /* slate-400 */
-      --text-quaternary: 100 116 139;  /* slate-500 */
-      --text-countdown-today: 110 231 183; /* emerald-300 */
-      --text-link-hover: 96 165 250;    /* blue-400 */
-      --text-link-gh-hover: 74 222 128; /* green-400 */
-
-      --border-primary: 71 85 105 / 0.5; /* slate-600/50 */
-      --ring-primary: 255 255 255 / 0.1;
+      /* Background Colors (Themeable) */
+      --background-primary: 241 245 249; /* Default: slate */
+      --background-home: 226 232 240;
+      --background-about: 241 245 249;
+      --background-contact: 226 232 240;
+      --background-frosted: var(--background-frosted-base) / 0.3;
     }
 
     [data-theme="rose"] {
@@ -81,6 +61,45 @@
       --background-about: 241 245 249;
       --background-contact: 226 232 240;
       --background-frosted: 148 163 184 / 0.2;
+    }
+
+    [data-theme="lavender"] {
+      --background-primary: 237 233 254; /* violet-100 */
+      --background-home: 221 214 254;   /* violet-200 */
+      --background-about: 237 233 254;
+      --background-contact: 221 214 254;
+      --background-frosted: 196 181 253 / 0.2; /* violet-300 */
+    }
+    
+    [data-theme="mint"] {
+      --background-primary: 240 253 244; /* green-50 */
+      --background-home: 220 252 231;   /* green-100 */
+      --background-about: 240 253 244;
+      --background-contact: 220 252 231;
+      --background-frosted: 167 243 208 / 0.2; /* green-200 */
+    }
+
+    /* --- NEW: Dark Themes --- */
+    [data-theme="deep-space"] {
+      --background-primary: 23 23 38;
+      --background-home: 38 38 58;
+      --background-about: 23 23 38;
+      --background-contact: 38 38 58;
+      --background-frosted: 88 88 128 / 0.2;
+    }
+    [data-theme="forest"] {
+      --background-primary: 16 32 23;
+      --background-home: 23 48 34;
+      --background-about: 16 32 23;
+      --background-contact: 23 48 34;
+      --background-frosted: 70 120 90 / 0.2;
+    }
+    [data-theme="wine-red"] {
+      --background-primary: 54 18 31;
+      --background-home: 80 27 46;
+      --background-about: 54 18 31;
+      --background-contact: 80 27 46;
+      --background-frosted: 140 80 100 / 0.2;
     }
 
     html, body {
