--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       --background-primary: 241 245 249; /* Default: slate */
       --background-home: 226 232 240;
       --background-about: 241 245 249;
+      --background-timeline: 233 238 244;
       --background-contact: 226 232 240;
       --background-frosted: var(--background-frosted-base) / 0.3;
     }
@@ -43,6 +44,7 @@
       --background-primary: 254 242 242;
       --background-home: 254 226 226;
       --background-about: 253 232 232;
+      --background-timeline: 254 242 242;
       --background-contact: 254 242 242;
       --background-frosted: 251 146 146 / 0.2;
     }
@@ -51,6 +53,7 @@
       --background-primary: 240 253 250;
       --background-home: 204 251 241;
       --background-about: 240 253 250;
+      --background-timeline: 221 249 243;
       --background-contact: 232 252 252;
       --background-frosted: 74 222 128 / 0.2;
     }
@@ -59,6 +62,7 @@
       --background-primary: 241 245 249;
       --background-home: 226 232 240;
       --background-about: 241 245 249;
+      --background-timeline: 233 238 244;
       --background-contact: 226 232 240;
       --background-frosted: 148 163 184 / 0.2;
     }
@@ -67,6 +71,7 @@
       --background-primary: 237 233 254; /* violet-100 */
       --background-home: 221 214 254;   /* violet-200 */
       --background-about: 237 233 254;
+      --background-timeline: 232 228 254;
       --background-contact: 221 214 254;
       --background-frosted: 196 181 253 / 0.2; /* violet-300 */
     }
@@ -75,6 +80,7 @@
       --background-primary: 240 253 244; /* green-50 */
       --background-home: 220 252 231;   /* green-100 */
       --background-about: 240 253 244;
+      --background-timeline: 230 253 237;
       --background-contact: 220 252 231;
       --background-frosted: 167 243 208 / 0.2; /* green-200 */
     }
@@ -84,6 +90,7 @@
       --background-primary: 23 23 38;
       --background-home: 38 38 58;
       --background-about: 23 23 38;
+      --background-timeline: 30 30 45;
       --background-contact: 38 38 58;
       --background-frosted: 88 88 128 / 0.2;
     }
@@ -91,6 +98,7 @@
       --background-primary: 16 32 23;
       --background-home: 23 48 34;
       --background-about: 16 32 23;
+      --background-timeline: 19 40 28;
       --background-contact: 23 48 34;
       --background-frosted: 70 120 90 / 0.2;
     }
@@ -98,6 +106,7 @@
       --background-primary: 54 18 31;
       --background-home: 80 27 46;
       --background-about: 54 18 31;
+      --background-timeline: 65 22 38;
       --background-contact: 80 27 46;
       --background-frosted: 140 80 100 / 0.2;
     }
