--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
     }
 
     .constellation-line {
+      stroke: rgb(var(--text-quaternary) / 0.2);
       stroke-width: 1px;
       transition: opacity 0.3s ease-in-out;
       pointer-events: none;
