--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
   <style>
-    /* --- NEW: Reworked Theme Variable System --- */
+    /* --- REWORKED: True Theming System --- */
     :root {
-      /* UI Colors (Fixed Light Theme) */
+      /* --- Default Light Theme --- */
+      /* UI Colors */
       --background-card: 255 255 255;
       --background-frosted-base: 224 242 254; /* sky-100 */
       --background-button: 255 255 255 / 0.8;
@@ -28,7 +29,7 @@
       --text-link-hover: 59 130 246;    /* blue-500 */
       --text-link-gh-hover: 22 163 74; /* green-600 */
 
-      --border-primary: 229 231 235;   /* gray-200/50 */
+      --border-primary: 229 231 235;   /* gray-200 */
       --ring-primary: 0 0 0 / 0.05;
 
       /* Background Colors (Themeable) */
@@ -40,6 +41,7 @@
       --background-frosted: var(--background-frosted-base) / 0.3;
     }
 
+    /* --- Light Theme Palettes --- */
     [data-theme="rose"] {
       --background-primary: 254 242 242;
       --background-home: 254 226 226;
@@ -48,7 +50,6 @@
       --background-contact: 254 242 242;
       --background-frosted: 251 146 146 / 0.2;
     }
-
     [data-theme="teal"] {
       --background-primary: 240 253 250;
       --background-home: 204 251 241;
@@ -57,7 +58,6 @@
       --background-contact: 232 252 252;
       --background-frosted: 74 222 128 / 0.2;
     }
-    
     [data-theme="slate"] {
       --background-primary: 241 245 249;
       --background-home: 226 232 240;
@@ -66,7 +66,6 @@
       --background-contact: 226 232 240;
       --background-frosted: 148 163 184 / 0.2;
     }
-
     [data-theme="lavender"] {
       --background-primary: 237 233 254; /* violet-100 */
       --background-home: 221 214 254;   /* violet-200 */
@@ -75,7 +74,6 @@
       --background-contact: 221 214 254;
       --background-frosted: 196 181 253 / 0.2; /* violet-300 */
     }
-    
     [data-theme="mint"] {
       --background-primary: 240 253 244; /* green-50 */
       --background-home: 220 252 231;   /* green-100 */
@@ -85,7 +83,28 @@
       --background-frosted: 167 243 208 / 0.2; /* green-200 */
     }
 
-    /* --- NEW: Dark Themes --- */
+    /* --- Dark Themes --- */
+    [data-theme="deep-space"],
+    [data-theme="forest"],
+    [data-theme="wine-red"] {
+        --background-card: 42 42 62;
+        --background-button: 50 50 80 / 0.6;
+        --background-button-refresh: 50 50 80 / 0.4;
+        --background-countdown: 42 42 62 / 0.7;
+        --background-countdown-today: 34 197 94 / 0.2;
+
+        --text-primary: 226 232 240;    /* slate-200 */
+        --text-secondary: 203 213 225;  /* slate-300 */
+        --text-tertiary: 148 163 184;   /* slate-400 */
+        --text-quaternary: 100 116 139; /* slate-500 */
+        --text-countdown-today: 110 231 183; /* emerald-300 */
+        --text-link-hover: 96 165 250;   /* blue-400 */
+        --text-link-gh-hover: 74 222 128; /* green-400 */
+
+        --border-primary: 71 85 105;   /* slate-600 */
+        --ring-primary: 255 255 255 / 0.1;
+    }
+
     [data-theme="deep-space"] {
       --background-primary: 23 23 38;
       --background-home: 38 38 58;
@@ -346,7 +365,6 @@
         animation: slide-up-fade-in 0.5s ease-out forwards;
     }
 
-    /* --- NEW: EEW Ripple Effect --- */
     @keyframes eew-ripple-effect {
       from {
         transform: translate(-50%, -50%) scale(0);
